# omaha

./: .dockerignore  .env.example  .gitignore  .mutmut-baseline  AGENTS.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  alembic.ini  docker-compose.yml  handoff-poc-to-official.md  opencode.json  package-lock.json  package.json  prek.toml  prod.yml  pyproject.toml  skills-lock.json
.agents/skills/openspec-roadmap/: README.md  REFERENCE.md  ROADMAP_SKELETON.md  SKILL.md
.agents/skills/refresh-for-test/: SKILL.md
.github/workflows/: ci.yml  ci.yml.disabled
.opencode/agents/: 1-propose-oai.md  1-propose-oc.md  1-roadmap-oai.md  1-roadmap-oc.md  2-apply-oai.md  2-apply-oc.md  2-propose-oai.md  2-propose-oc.md  3-apply-oai.md  3-apply-oc.md  3-finalize-oai.md  3-finalize-oc.md  4-finalize-oai.md  4-finalize-oc.md  apply-oai.md  apply-oc.md  apply-specialist-openai.md  apply-specialist-opencode.md  apply.md  explore-oai.md  explore-oc.md  explore.md  finalize-oai.md  finalize-oc.md  finalize-specialist-openai.md  finalize-specialist-opencode.md  finalize.md  propose-oai.md  propose-oc.md  propose-specialist-openai.md  propose-specialist-opencode.md  propose.md  review-oai.md  review-oc.md  review.md  roadmap-oai.md  roadmap-oc.md  roadmap-openai.md  roadmap-opencode.md  roadmap-orchestrator-openai.md  (+3 more)
.opencode/command/: roadmap.md
.opencode/commands/: plan-archive.md  plan-create.md  plan-next.md  plan-status.md  plan-validate.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/openspec-apply-change/: SKILL.md
.opencode/skills/openspec-roadmap/: CONTEXT.md  SKILL.md
.opencode/skills/plan-workflow/: SKILL.md
.opencode/skills/refresh-for-test/: SKILL.md
.opencode/skills/self-learning/: SKILL.md
.planning/: MILESTONES.md  PROJECT.md  REBALANCE_PLAN.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phase-s04-import/: POST-MORTEM.md
.planning/phases/01-audit/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-UAT.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-palette/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_macro_classes.py  0003_assets.py  0004_positions.py  0005_import_previews.py  0006_asset_target_pct.py  0014_add_quote_cache_and_quote_kind.py  0015_bump_position_precision.py  0016_asset_trade_flags.py  0017_is_family_sentinel.py  0018_db_mutation_guards.py  0019_asset_target_pct_precision.py  2026_06_26_0039-1c73065cff10_add_position_totals.py
data/seed/: README.md  ana_assets.csv  ana_classes.csv  ana_positions.csv  italo_assets.csv  italo_classes.csv  italo_positions.csv
nginx/: nginx.conf
openspec/: PRD.md  config.yaml  roadmap.md
openspec/changes/asset-table-view/: tasks.md
openspec/changes/bdd-step-reuse-helpers/: design.md  proposal.md  tasks.md
openspec/changes/class-section-consolidated-totals/: design.md  proposal.md  tasks.md
openspec/changes/direct-landing-with-header-profile-switcher/: design.md  proposal.md  tasks.md
openspec/changes/expand-prek-hooks/: design.md  proposal.md  tasks.md
openspec/changes/f02-top-level-tab-nav-and-patrimonio/: design.md  tasks.md
reports/: contrast_audit.html
scripts/: backup.py  backup_scheduler.py  baseline_gherkin_lines.json  certbot_loop.sh  clear_assets.py  dev_reset.py  generate_audit_manifest.py  generate_contrast_audit.py  measure_bdd_reuse.py  mutation_baseline.py  mutation_report.py  print_lan_url.sh  reset_both_profiles.py  seed_from_csv.py  snapshot_db.py  snapshot_to_csv.py
scripts/seed_from_csv/: __init__.py  __main__.py  loaders.py  modes.py  profiles.py  validation.py  wipe.py
src/omaha/: __init__.py  auth.py  config.py  csv_import.py  db.py  logging_config.py  main.py  middleware.py  models.py  mutation_guards.py  seed.py  validators.py
src/omaha/audit/: cli.py  (+5 more)
tests/: AUDIT.md  PERFORMANCE.md  REVIEW_DECISIONS.md  _inventory_raw.txt  bdd_replay.py  conftest.py  posicao_italo.csv  test_admin_recovery.py  test_assets_delete.py  test_assets_e2e.py  test_assets_model.py  test_assets_patch_legacy.py  test_assets_post.py  test_assets_routes.py  test_assets_trade_flags.py  test_audit_color_resolver.py  test_audit_css_parser.py  test_audit_inventory.py  test_audit_report.py  test_auth.py  test_backup.py  test_classes_delete.py  test_classes_e2e.py  test_classes_model.py  test_classes_patch.py  test_classes_post.py  test_classes_routes.py  test_csv_import.py  test_dark_mode_tokens.py  test_db_mutations.py  test_db_reset_both_profiles.py  test_db_snapshot.py  test_e2e.py  test_e2e_port_uniqueness.py  test_family_aggregate.py  test_healthz.py  test_iconography_tokens.py  test_import_commit.py  test_import_get_preview.py  test_import_preview.py  (+65 more)
tests/audit_integration/: test_app_css_shape.py  test_audit_inventory.py  test_logging_middleware.py  test_report_pipeline.py
tests/bdd/: .collected_order.txt  README.md  conftest.py  test_scenarios.py  test_workflow_contracts.py
tests/e2e/: M002_RESSALVA_DIAGNOSIS.md  conftest.py  selectors.py  test_asset_crud.py  test_asset_table.py  test_class_crud.py  test_class_section_alignment.py  test_full_journey.py  test_import_modal.py  test_import_user_journey.py  test_inline_edit.py  test_rebalance_page.py  test_s01_inline_edit.py  test_s02_class_crud.py  test_s03_asset_crud.py  test_s03_user_journey.py  test_s04_import_modal.py  test_s04_user_journey.py  test_s05_user_journey.py  test_s05_visual_gate.py  test_s06_full_journey.py  test_s10_asset_table.py  test_selector_inventory.py  test_user_journey.py  test_user_journey_rebalance.py  test_visual_gate.py
tests/fixtures/: rebalance_stub_fixture.json  sample_broker.csv  tiny_empty.csv  tiny_portfolio.csv
tests/scripts/: __init__.py  test_reset_both_profiles.py
tests/support/: __init__.py  browser.py  constants.py  db.py  hooks.py  import_flow.py  server.py
tests/visual/: __init__.py  conftest.py  test_snapshots.py
(+788 files in other folders)
