[project]
name = "omaha"
version = "0.1.0"
description = "Family investment portfolio tracker (Italo + Ana Livia)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Italo" }
]
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "bcrypt>=4.2",
    "itsdangerous>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "httpx2>=0.1",
    "tinycss2>=1.3",
    "coloraide>=2.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "ruff>=0.6",
    "prek>=0.2",
    "playwright>=1.60.0",
    "taskipy>=1.13",
]

[project.scripts]
omaha = "omaha.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omaha"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"src/omaha/**/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "unit: pure-function tests, no DB no HTTP",
    "integration: tests requiring DB, TestClient, or external services",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src/omaha"]
exclude = ["**/alembic/*"]
venvPath = "."
venv = ".venv"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# taskipy — dev shortcut manager.
#
# Run a task with:    uv run task <name>      (canonical)
# or with the venv active:  task <name>
#
# List all tasks:     uv run task --list     (or: uv run task -l)
# Show help text:     uv run task --list -v  (newer taskipy)
# ---------------------------------------------------------------------------

[tool.taskipy.settings]
# Always run from the project root, regardless of the caller's cwd.
cwd = "."
# Enable {var} substitution in task commands. Required so {app_target}
# (and any future variables) get expanded. Note: literal braces in task
# commands (e.g. find -exec {} +) must be written as {{}} to survive
# the format() call.
use_vars = true

[tool.taskipy.variables]
app_target = "omaha.main:app"

[tool.taskipy.tasks]

# ── Development server ──────────────────────────────────────────────────────
# Bind to 0.0.0.0 — `localhost` does not work from a separate client machine
# on the LAN. See README "Network access" for the rationale.
serve       = { cmd = "uv run uvicorn {app_target} --host 0.0.0.0 --port 8000 --reload", help = "Start the dev server on 0.0.0.0:8000 with auto-reload" }
serve-prod  = { cmd = "uv run uvicorn {app_target} --host 0.0.0.0 --port 8000",          help = "Start the server without auto-reload (production-shaped)" }

# ── Tests ───────────────────────────────────────────────────────────────────
test             = { cmd = "uv run pytest",                                           help = "Run the full test suite (unit + integration + e2e)" }
test-unit        = { cmd = "uv run pytest -m unit",                                   help = "pure-function tests, no DB no HTTP, no Playwright" }
test-integration = { cmd = "uv run pytest -m integration",                            help = "tests requiring DB, TestClient, or audit pipeline (full S0* + T0* route families)" }
test-e2e         = { cmd = "uv run pytest tests/e2e -v",                             help = "Playwright tests under tests/e2e/" }
test-file        = { cmd = "uv run pytest -v",                                        help = "Run a specific test file:  task test-file tests/test_X.py" }
test-pattern     = { cmd = "uv run pytest -v -k",                                     help = "Run tests matching a name substring:  task test-pattern \"smoke\"" }
test-one         = { cmd = "uv run pytest -v",                                        help = "Run a single test by node id:  task test-one tests/test_X.py::test_y" }

# ── Lint / format ───────────────────────────────────────────────────────────
lint    = { cmd = "uv run prek run --all-files",  help = "Run prek hooks: ruff format check, ruff --fix, hygiene" }
format  = { cmd = "uv run ruff format .",          help = "Auto-format the codebase with ruff" }
check   = { cmd = "task lint && task test-unit",   help = "CI-style gate: lint + unit/integration tests" }

# ── Database ────────────────────────────────────────────────────────────────
# Alembic migrations are run automatically on startup, but having an explicit
# task is useful for ops hand-off and for the `db-revision` authoring loop.
db-migrate  = { cmd = "uv run alembic upgrade head",                                 help = "Apply pending Alembic migrations" }
db-revision = { cmd = "uv run alembic revision --autogenerate",                      help = "Create a new Alembic revision:  task db-revision -m \"add foo column\"" }
db-seed     = { cmd = "uv run python -m omaha.seed",                                 help = "Run the idempotent family + profiles seed" }
db-reset    = { cmd = "uv run python -m scripts.dev_reset",                          help = "Wipe + reseed Italo's profile for manual import-flow testing" }
db-current  = { cmd = "uv run alembic current",                                      help = "Show the current Alembic revision head" }
db-history  = { cmd = "uv run alembic history",                                      help = "Show the full Alembic migration timeline" }
db-clear-assets = { cmd = "uv run python -m scripts.clear_assets",                     help = "Delete ALL asset rows (keep classes intact)" }
db-downgrade = { cmd = "uv run alembic downgrade -1",                                help = "Revert the last Alembic migration" }

# ── Install / setup ─────────────────────────────────────────────────────────
install     = { cmd = "uv sync",                                       help = "Install / sync locked dependencies into .venv" }
install-e2e = { cmd = "uv run playwright install chromium",            help = "Download the Playwright Chromium browser (one-time)" }
prek-install = { cmd = "uv run prek install --hook-type pre-commit --hook-type pre-push --hook-type commit-msg", help = "Install prek git hooks (pre-commit, pre-push, commit-msg) into .git/hooks/" }

# ── Backup ──────────────────────────────────────────────────────────────────
backup      = { cmd = "docker compose -f prod.yml run --rm backup",    help = "Snapshot the prod DB to ./backups/ (one-off container)" }

# ── Maintenance ─────────────────────────────────────────────────────────────
# Wipes Python bytecode caches + the ruff/pytest caches. Excludes .venv
# and node_modules — those caches are owned by the toolchain, not by us.
clean       = { cmd = "find . -type d -name __pycache__ -not -path './.venv/*' -not -path './node_modules/*' -exec rm -rf {{}} + 2>/dev/null; rm -rf .pytest_cache .ruff_cache", help = "Remove Python bytecode and tool caches (keeps .venv and node_modules)" }

# ── Docker dev ──────────────────────────────────────────────────────────────
docker-build = { cmd = "docker compose build",                              help = "Build the dev Docker image from docker-compose.yml" }
docker-up    = { cmd = "docker compose up -d",                              help = "Start the dev Docker Compose stack in detached mode" }
docker-down  = { cmd = "docker compose down",                               help = "Stop and remove the dev Docker Compose stack" }

# ── Docker prod ─────────────────────────────────────────────────────────────
prod-up      = { cmd = "docker compose -f prod.yml up -d",                  help = "Start the production Docker Compose stack" }
prod-down    = { cmd = "docker compose -f prod.yml down",                   help = "Stop and remove the production Docker Compose stack" }
prod-logs    = { cmd = "docker compose -f prod.yml logs -f",                help = "Stream logs from all production services" }
prod-rebuild = { cmd = "docker build -t omaha:prod . && docker compose -f prod.yml up -d", help = "Rebuild the prod image and restart the stack" }

# ── Code quality ────────────────────────────────────────────────────────────
coverage     = { cmd = "uv run pytest --cov=src/omaha --cov-report=term-missing", help = "Run tests with coverage report (missing lines per module)" }
update       = { cmd = "uv sync --upgrade",                                 help = "Upgrade all dependencies within version constraints" }

# ── Onboarding ──────────────────────────────────────────────────────────────
secret-key   = { cmd = "python -c \"import secrets; print(secrets.token_urlsafe(50))\"", help = "Generate a cryptographically random SECRET_KEY" }
