[project]
name = "omaha"
version = "0.1.0"
description = "Family investment portfolio tracker (Italo + Ana Livia)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Italo" }
]
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "bcrypt>=4.2",
    "itsdangerous>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "yfinance>=1.4",
    "pandas>=2.2",
    "numpy>=2.0",
    "cvxpy>=1.5,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "httpx2>=0.1",
    "tinycss2>=1.3",
    "coloraide>=2.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "ruff>=0.6",
    "prek>=0.2",
    "playwright>=1.60.0",
    "taskipy>=1.13",
    "pytest-bdd>=8.0,<10",
    "mutmut>=3.0,<4",
    "pytest-xdist>=3.6",
]

[project.scripts]
omaha = "omaha.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omaha"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"src/omaha/**/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --ignore=tests/e2e/_disabled"
markers = [
    "unit: pure-function tests, no DB no HTTP",
    "integration: tests requiring DB, TestClient, or external services",
    "bdd: BDD e2e scenarios under tests/bdd/",
    "xdist_group(name): group tests to run in the same xdist worker",
]

[tool.coverage.run]
source = ["src/omaha"]
branch = false
omit = [
    "src/omaha/__main__.py",
]

[tool.coverage.report]
# Coverage is informational — no fail_under threshold (D-T02.4).
# `term-missing` is added by `task coverage` only; the XML report is
# produced by every pytest invocation via addopts so CI can upload it.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mutmut]
# Mutation testing for the rebalance solver (PRD §4.4 critical area).
# mutmut3 reads this block on first `mutmut run` invocation. Scope is
# restricted via `only_mutate` — the auto-guess would otherwise walk all
# of `src/`, which is broader than we want for the first slice (D-T03.3).
# Adding more files is a follow-up slice (R/T), not a config flip here.
#
# `also_copy` mirrors the tree dependencies our integration tests need
# at the `mutants/` cwd (mutmut runs pytest under that subdir). Without
# these, `tests/scripts/test_reset_both_profiles.py`'s `from scripts...`
# import fails at collection, and alembic can't locate `alembic.ini`.
# See `mutmut/__main__.py` `also_copy` defaults for the upstream rules.
source_paths = ["src"]
only_mutate = [
    "src/omaha/rebalance/solver.py",
    "src/omaha/rebalance/validation.py",
]
also_copy = [
    "scripts/",
    "alembic/",
    "alembic.ini",
    "data/seed/",
    "data/seed/README.md",
    "tests/scripts/",
    "tests/fixtures/",
    "tests/posicao_italo.csv",
    # Mirror the top-level deployment artifacts that integration tests
    # open via `REPO_ROOT` (e.g. `tests/test_dockerfile.py`,
    # `tests/test_backup.py`). Without these, mutmut's per-test pytest
    # run — which executes from `mutants/` — fails collection because
    # the cwd-relative `REPO_ROOT` shift makes the originals missing.
    "prod.yml",
    "docker-compose.yml",
    "Dockerfile",
    "nginx/",
    "nginx/nginx.conf",
]
# Override the project's `addopts` (which appends `--cov` and
# `--cov-report=xml:reports/coverage.xml` to every pytest invocation)
# so mutmut's per-mutant pytest runs stay fast. Also skip tests/e2e
# and tests/bdd — mutmut's trampoline is collected against unit
# tests only (Playwright would dominate wall-clock cost).
#
# `pytest_add_cli_args_test_selection` scopes the stats phase to
# pure-function rebalance tests in `tests/test_rebalance_*.py`
# (the `_UNIT_FILES` set in `tests/conftest.py`). Integration tests
# (DB/TestClient-based) are out of scope for the first slice
# because mutmut runs pytest from a `mutants/` cwd which loses
# the project's REPO_ROOT-relative paths — extending coverage to
# the integration set needs a follow-up slice (mutmut 3.x
# limitation; see `openspec/roadmap.md` T03 Notes).
pytest_add_cli_args = [
    "--no-cov",
    "-p", "no:cacheprovider",
    "--ignore=tests/e2e",
    "--ignore=tests/bdd",
]
pytest_add_cli_args_test_selection = [
    "tests/test_rebalance_constants.py",
    "tests/test_rebalance_engine_regression.py",
    "tests/test_rebalance_policy.py",
    "tests/test_rebalance_postprocessing.py",
    "tests/test_rebalance_solver.py",
    "tests/test_rebalance_validation.py",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src/omaha"]
exclude = ["**/alembic/*"]
venvPath = "."
venv = ".venv"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml"]
update_changelog_on_bump = true
target_branch = "main"

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# taskipy — dev shortcut manager.
#
# Run a task with:    uv run task <name>      (canonical)
# or with the venv active:  task <name>
#
# List all tasks:     uv run task --list     (or: uv run task -l)
# Show help text:     uv run task --list -v  (newer taskipy)
# ---------------------------------------------------------------------------

[tool.taskipy.settings]
# Always run from the project root, regardless of the caller's cwd.
cwd = "."
# Enable {var} substitution in task commands. Required so {app_target}
# (and any future variables) get expanded. Note: literal braces in task
# commands (e.g. find -exec {} +) must be written as {{}} to survive
# the format() call.
use_vars = true

[tool.taskipy.variables]
app_target = "omaha.main:app"

[tool.taskipy.tasks]

# ── Development server ──────────────────────────────────────────────────────
# Bind to 0.0.0.0 — `localhost` does not work from a separate client machine
# on the LAN. See README "Network access" for the rationale.
serve       = { cmd = "uv run uvicorn {app_target} --host 0.0.0.0 --port 8000 --reload", help = "Start the dev server on 0.0.0.0:8000 with auto-reload" }
serve-prod  = { cmd = "uv run uvicorn {app_target} --host 0.0.0.0 --port 8000",          help = "Start the server without auto-reload (production-shaped)" }

# ── Tests ───────────────────────────────────────────────────────────────────
test             = { cmd = "uv run pytest",                                           help = "Run the full test suite (unit + integration + audit + e2e + visual + BDD)" }
test-unit        = { cmd = "uv run pytest -m unit --cov=src/omaha --cov-report=xml:reports/coverage.xml", help = "pure-function tests, no DB no HTTP, no Playwright" }
test-integration = { cmd = "uv run pytest -m integration --ignore=tests/audit_integration --cov=src/omaha --cov-report=xml:reports/coverage.xml", help = "tests requiring DB, TestClient, or external services (excludes tests/audit_integration/)" }
test-integration-parallel = { cmd = "uv run pytest -m integration --ignore=tests/audit_integration -n auto --dist loadgroup --cov=src/omaha --cov-report=xml:reports/coverage.xml", help = "parallel integration tests via pytest-xdist (-n auto, loadgroup for xdist_group serialization)" }
test-audit-integration = { cmd = "uv run pytest tests/audit_integration -v",           help = "heavy audit integration tests under tests/audit_integration/" }
test-e2e         = { cmd = "uv run pytest tests/e2e -v --no-cov",                   help = "Playwright tests under tests/e2e/" }
test-visual      = { cmd = "uv run pytest tests/visual -v --no-cov",                 help = "Playwright visual regression tests under tests/visual/" }
test-bdd         = { cmd = "uv run pytest tests/bdd -v --no-cov",                     help = "BDD e2e scenarios under tests/bdd/ (pytest-bdd, real chromium, serial)" }
test-bdd-single  = { cmd = "uv run python -m tests.bdd_replay",                      help = "Rebuild BDD test DB, then replay one scenario or ordered prefix (use --trace / --after FILE)" }
test-file        = { cmd = "uv run pytest -v",                                        help = "Run a specific test file:  task test-file tests/test_X.py" }
test-pattern     = { cmd = "uv run pytest -v -k",                                     help = "Run tests matching a name substring:  task test-pattern \"smoke\"" }
test-one         = { cmd = "uv run pytest -v",                                        help = "Run a single test by node id:  task test-one tests/test_X.py::test_y" }

# ── Lint / format ───────────────────────────────────────────────────────────
lint    = { cmd = "uv run prek run --all-files",  help = "Run prek hooks: ruff format check, ruff --fix, hygiene" }
format  = { cmd = "uv run ruff format .",          help = "Auto-format the codebase with ruff" }
check   = { cmd = "task lint && task test-unit",   help = "CI-style gate: lint + unit tests (deprecated — use gate-fast)" }
gate-fast = { cmd = "uv run prek run --all-files && uv run pytest -m unit --cov=src/omaha --cov-report=xml:reports/coverage.xml", help = "Pre-merge fast gate: lint + unit tests, target < 2 min wall-clock" }

# ── Database ────────────────────────────────────────────────────────────────
# Alembic migrations are run automatically on startup, but having an explicit
# task is useful for ops hand-off and for the `db-revision` authoring loop.
db-migrate  = { cmd = "uv run alembic upgrade head",                                 help = "Apply pending Alembic migrations" }
db-revision = { cmd = "uv run alembic revision --autogenerate",                      help = "Create a new Alembic revision:  task db-revision -m \"add foo column\"" }
db-seed     = { cmd = "uv run python -m omaha.seed",                                 help = "Run the idempotent family + profiles seed" }
db-seed-from-csv = { cmd = "uv run python -m scripts.seed_from_csv --profile italo --mode reset", help = "Wipe + reseed Italo from data/seed/*.csv (override with -- --profile ana --mode diff)" }
db-seed-diff     = { cmd = "uv run python -m scripts.seed_from_csv --profile italo --mode diff",  help = "Print the CSV-vs-DB diff for Italo without writing (override with -- --profile ana)" }
db-seed-upsert   = { cmd = "uv run python -m scripts.seed_from_csv --profile italo --mode upsert",help = "Reconcile Italo's DB with data/seed/*.csv (create-or-update, no delete). Override with -- --profile ana" }
db-reset    = { cmd = "uv run python -m scripts.reset_both_profiles",                              help = "Wipe + reseed BOTH profiles (Italo + Ana) from data/seed/*.csv in one invocation" }
db-snapshot = { cmd = "uv run python -m scripts.snapshot_to_csv",                                help = "Export live DB state (classes + assets + positions) to data/seed/*.csv for ALL canonical profiles (italo + ana). Internal dev tool." }
db-current  = { cmd = "uv run alembic current",                                      help = "Show the current Alembic revision head" }
db-history  = { cmd = "uv run alembic history",                                      help = "Show the full Alembic migration timeline" }
db-clear-assets = { cmd = "uv run python -m scripts.clear_assets",                     help = "Delete ALL asset rows (keep classes intact)" }
db-downgrade = { cmd = "uv run alembic downgrade -1",                                help = "Revert the last Alembic migration" }

# ── Install / setup ─────────────────────────────────────────────────────────
install     = { cmd = "uv sync",                                       help = "Install / sync locked dependencies into .venv" }
install-e2e = { cmd = "uv run playwright install chromium",            help = "Download the Playwright Chromium browser (one-time)" }
prek-install = { cmd = "uv run prek install --hook-type pre-commit --hook-type pre-push --hook-type commit-msg", help = "Install prek git hooks (pre-commit, pre-push, commit-msg) into .git/hooks/" }

# ── Backup ──────────────────────────────────────────────────────────────────
backup      = { cmd = "docker compose -f prod.yml run --rm backup",    help = "Snapshot the prod DB to ./backups/ (one-off container)" }

# ── Maintenance ─────────────────────────────────────────────────────────────
# Wipes Python bytecode caches + the ruff/pytest caches. Excludes .venv
# and node_modules — those caches are owned by the toolchain, not by us.
clean       = { cmd = "find . -type d -name __pycache__ -not -path './.venv/*' -not -path './node_modules/*' -exec rm -rf {{}} + 2>/dev/null; rm -rf .pytest_cache .ruff_cache", help = "Remove Python bytecode and tool caches (keeps .venv and node_modules)" }

# ── Docker dev ──────────────────────────────────────────────────────────────
docker-build = { cmd = "docker compose build",                              help = "Build the dev Docker image from docker-compose.yml" }
docker-up    = { cmd = "docker compose up -d",                              help = "Start the dev Docker Compose stack in detached mode" }
docker-down  = { cmd = "docker compose down",                               help = "Stop and remove the dev Docker Compose stack" }

# ── Docker prod ─────────────────────────────────────────────────────────────
prod-up      = { cmd = "docker compose -f prod.yml up -d",                  help = "Start the production Docker Compose stack" }
prod-down    = { cmd = "docker compose -f prod.yml down",                   help = "Stop and remove the production Docker Compose stack" }
prod-logs    = { cmd = "docker compose -f prod.yml logs -f",                help = "Stream logs from all production services" }
prod-rebuild = { cmd = "docker build -t omaha:prod . && docker compose -f prod.yml up -d", help = "Rebuild the prod image and restart the stack" }

# ── Code quality ────────────────────────────────────────────────────────────
coverage     = { cmd = "uv run pytest -m 'unit or integration' --ignore=tests/audit_integration --cov=src/omaha --cov-report=term-missing --cov-report=xml:reports/coverage.xml", help = "Run unit + integration tests with coverage report (term-missing + XML; audit/e2e/bdd/visual excluded for speed)" }
# Mutation testing — scope is `rebalance.engine` + `rebalance.data_bridges`
# only (D-T03.3). Config lives in `[tool.mutmut]` in this file; mutmut
# reads it on first `mutmut run` invocation. First execution may take
# 5–15 min; report + baseline live as separate tasks so the cache is
# reusable across calls.
mutation          = { cmd = "uv run mutmut run", help = "Run mutation testing on the rebalance solver + validation (scoped via [tool.mutmut] only_mutate; first run populates mutants/)" }
mutation-report   = { cmd = "uv run python -m scripts.mutation_report", help = "Render mutation results to stdout: per-status counts + killed share (errors if mutants/ has no .meta files)" }
mutation-baseline = { cmd = "uv run python -m scripts.mutation_baseline", help = "Capture the current mutation score to .mutmut-baseline (killed, survived, no_tests, timeout, skipped, killed_share, generated_at)" }
update       = { cmd = "uv sync --upgrade",                                 help = "Upgrade all dependencies within version constraints" }

# ── Onboarding ──────────────────────────────────────────────────────────────
secret-key   = { cmd = "python -c \"import secrets; print(secrets.token_urlsafe(50))\"", help = "Generate a cryptographically random SECRET_KEY" }
